@@ -623,7 +623,7 @@ $MIMEFILE='/etc/mime.types';
 		</li>
 	</ul>
   </li>
-  <li> Compression is enabled by default (<code>$ENABLE_COMPRESSION = 1;</code>) but this option can increase the load on your server.</li>
+  <li> Compression of HTML, JavaScript, and CSS is enabled by default (<code>$ENABLE_COMPRESSION = 1;</code>) but this option can increase the load on your server.</li>
   <li> Filter and limit large folders (<code>$FILECOUNTLIMIT</code>, <code>$FILECOUNTPERDIRLIMIT</code>, <code>$FILEFILTERPERDIR</code>)</li>
   <li> Limit folder depth for copy/move operations (<code>$LIMIT_FOLDER_DEPTH</code>)</li>
   <li> Change the bufsize for upload/download operations (<code>$BUFSIZE</code>)</li>
