@@ -2,6 +2,7 @@
      - added folder redirect feature for disabled file/folder management requested by Laurent Bardi <Laurent.Bardi@ipbs.fr>
      - added (incomplete) french translatations for the Web interface (thanx Laurent Bardi <Laurent.Bardi@ipbs.fr>)
      - added sysinfo feature (GET)
+     - added gzip, deflate encoding support (GET, PROPFIND, PROPPATCH, SEARCH, REPORT)
      - Web interface:
          - added gzip content encoding support (GET)
          - added variable substitution for $HEADER, $LANGSWITCH, $SIGNATURE (GET)
